--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -124,37 +124,12 @@
                 >
               </li>
             </ul>
-            <div class="icons-menu">
+            <div class="mbr-section-btn mt-2 icons-menu">
               <a
-                class="iconfont-wrapper"
-                href="https://bit.ly/fbAkantarmde"
+                href="{% url 'user' %}"
+                class="btn btn-black display-6"
                 target="_blank"
-              >
-                <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
-              </a>
-              <a
-                class="iconfont-wrapper"
-                href="https://bit.ly/AKantarWhatsapp"
-                target="_blank"
-              >
-                <span class="p-2 mbr-iconfont socicon-whatsapp socicon"></span>
-              </a>
-              <a
-                class="iconfont-wrapper"
-                href="https://bit.ly/AKantarInstagram"
-                target="_blank"
-              >
-                <span class="p-2 mbr-iconfont socicon-instagram socicon"></span>
-              </a>
-              <a
-                class="iconfont-wrapper"
-                href="https://bit.ly/mapsakantar"
-                target="_blank"
-              >
-                <span
-                  class="p-2 mbr-iconfont socicon-googlemaps socicon"
-                ></span>
-              </a>
+                >Solicitar canción</a>
             </div>
           </div>
         </div>
@@ -264,14 +239,6 @@
                   nocturna.
                 </p>
               </div>
-              <div class="mbr-section-btn item-footer mt-2">
-                <a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSdBg0E3tKgqW4K1YgrHUbsif-kK0PZ6nueZKUsl3CA9Mp7-fA/viewform"
-                  class="btn item-btn btn-black display-7"
-                  target="_blank"
-                  >Solicitar canción &gt;</a
-                >
-              </div>
             </div>
           </div>
           <div class="item features-image сol-12 col-md-6 col-lg-4">
@@ -287,7 +254,7 @@
               </div>
               <div class="mbr-section-btn item-footer mt-2">
                 <a
-                  href="{% url 'page' %}"
+                  href="{% url 'menu' %}"
                   class="btn item-btn btn-black display-7"
                   target="_blank"
                   >Ver la carta &gt;</a
